--- a/3. CSS-Basics/Challenge-One/style.css
+++ b/3. CSS-Basics/Challenge-One/style.css
@@ -1,3 +1,13 @@
 *{
-	background-color: blue;
+	background-color: rgb(85, 204, 255);
+}
+
+ul, li {
+	text-align: center;
+	list-style: none;
+}
+
+span{
+	font-size: 20px;
+	font-weight: 900;
 }
