--- a/3. CSS-Basics/Challenge-One-A/style.css
+++ b/3. CSS-Basics/Challenge-One-A/style.css
@@ -8,11 +8,6 @@ ul, li {
 	font-style: italic;
 }
 
-span{
-	font-size: 20px;
-	font-weight: 900;
-}
-
 h1{
 	margin-top: 0px;
 	margin-left: 0px;
@@ -33,6 +28,11 @@ h1{
 	padding-bottom: 9px;
 	padding-right: 9px;
 	background: rgb(245,245,220);
+}
+
+li:first-letter{
+	font-size: 20px;
+	font-weight: 900;
 }
 
 .copyright{
